rca/static_src/sass/components/_title-area.scss
.title-area {
    $root: &;
    padding-bottom: ($gutter * 3);

    @include media-query(medium) {
        padding-bottom: ($gutter * 4);
    }

    @include media-query(large) {
        padding-bottom: ($gutter * 3);
    }

    &__heading {
        margin-bottom: ($gutter / 2);
    }

    &__content {
        padding-top: ($gutter * 1.5);
        grid-column: 1 / span 2;

        @include media-query(medium) {
            grid-column: 1 / span 1;
            position: relative;
            padding-top: 0;
            top: -14px; // specific value to align baseline of font with notch bottom
        }

        @include media-query(large) {
            grid-column: 2 / span 3;
            top: 0;

            #{$root}--index & {
                grid-column: 2 / span 2;
            }
        }
    }

    &__image {
        position: relative;
        left: -20px; // spill out of margins
        grid-column: 1 / span 2;
        width: calc(100% + 40px);

        @include media-query(medium) {
            grid-column: auto;
            position: absolute;
            top: 128px;
            left: initial;
            right: 0;
            width: 50%;
            height: auto;
        }

        @include media-query(large) {
            width: 33.333%;
        }
    }

    &__aside {
        // We want to align this aside text with the top of the second line of text of the heading.
        // However there are viewports right after the "large" width where this would cause the text to overlap.
        // In those cases, we align the text with the bottom of the line instead, so there is no overlap.
        $xxxl-font: map-get($large-font-sizes, xxxl);
        $heading-line-height: $xxxl-font * ($line-height-large / 100%);
        $heading-line-2-bottom: $heading-line-height * 2;
        // We want the text to be aligned with the top of lowercase letters on the line, so need extra space.
        $heading-line-2-top: $heading-line-height * 1 + 23px;
        grid-column: 2;

        @include media-query(large) {
            grid-column: 4;
            margin-top: $heading-line-2-bottom;
        }

        @media only screen and (min-width: 1180px) {
            margin-top: $heading-line-2-top;
        }

        .rich-text a {
            // Prevent multiline CTAs from having bigger underlines than they should.
            display: inline;
        }
    }

    &__profile-title {
        display: block;
    }

    &--index {
        padding-top: $gutter * 5.5;

        @include media-query(medium) {
            padding-top: $gutter * 12;
        }

        @include media-query(large) {
            padding-top: $gutter * 9;
        }
    }

    // Staff detail specific styles
    &--staff-detail {
        padding-bottom: $gutter;

        @include media-query(medium) {
            padding-bottom: ($gutter * 3);
        }

        #{$root}__breadcrumb {
            @include media-query(large) {
                margin-bottom: ($gutter * 2);
            }
        }

        #{$root}__heading {
            margin-bottom: ($gutter * 0.75);

            @include media-query(large) {
                margin-bottom: ($gutter * 3);
            }
        }

        #{$root}__sub-heading {
            margin-bottom: ($gutter * 0.75);

            @include media-query(large) {
                margin-bottom: ($gutter * 1.5);
            }
        }
    }

    &--research-centre {
        #{$root}__content {
            @include media-query(medium) {
                // Titles are generally longer on research centre pages, so give them more space on tablets
                grid-column: 1 / span 2;
            }
            @include media-query(large) {
                grid-column: 2 / span 3;
            }
        }
    }

    .bg--dark & {
        #{$root}__sub-heading {
            color: $color--meta-darkbg;
        }
    }

    .bg--light & {
        #{$root}__sub-heading {
            color: $color--meta-lightbg;
        }
    }
}

